# crawl_app

./: .gitignore  Dockerfile  README.md  pyproject.toml
.cursor/rules/: clean-code.mdc  existing-code.mdc  projec-config.mdc
urlevaluator/: __init__.py
urlevaluator/src/: __init__.py  main.py
urlevaluator/src/classifier/: __init__.py  download_model.py  link_processor.py  topic_classifier.py
urlevaluator/src/database/: __init__.py  init_db.py  queue.py  url_db_manager.py
urlevaluator/src/scraper/: __init__.py  crawler.py  link_models.py  models.py
urlevaluator/src/utils/: __init__.py  analytics.py  cli.py  log_handler.py  query_db.py  singleton.py
urlevaluator/tests/: README.md  conftest.py  test_title_classifier.py
urlevaluator/tests/classifier/: test_download_model.py  test_link_processor.py  test_topic_classifier.py
urlevaluator/tests/database/: test_init_db.py  test_url_db_manager.py
urlevaluator/tests/scraper/: test_crawler.py  test_models.py
urlevaluator/tests/utils/: test_analytics.py  test_query_db.py
